--- a/.github/workflows/update-burn.yml
+++ b/.github/workflows/update-burn.yml
@@ -3,7 +3,7 @@ name: Update burn & price
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # ogni giorno alle 00:00 UTC
+    - cron: "0 * * * *"   # ogni ora, al minuto 0
   workflow_dispatch:       # avvio manuale
 
 permissions:
